<resources>
    <string name="app_name">News.by</string>

    <string name="no_earthquakes">Новостей не найдено</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="share_news">Поделиться новостью</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="settings_content_actual">Актуально</string>
    <string name="settings_content_main">Главное</string>
    <string name="settings_content_society">Общество</string>
    <string name="settings_content_culture">Культура</string>
    <string name="settings_content_official">Официально</string>
    <string name="settings_content_event">События</string>
    <string name="settings_content_economic">Экономика</string>
    <string name="settings_content_heals">Здоровье</string>
    <string name="settings_content_sport">Спорт</string>
    <string name="settings_content_citizen">Оршанцы</string>
    <string name="settings_content_photo">Фоторепортажи</string>
    <string name="settings_content_partnership">Партнерский материал</string>
    <string name="settings_content_group">Профсоюзы</string>
    <string name="settings_content_anniversary">Юбилей города</string>


    <string name="settings_menu_item">Settings</string>

    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Left navigation menu -->
    <string name="announcement_title">Афиша</string>
    <string name="vacancy_title">Вакансии</string>
    <string name="contacts_title">Контакты</string>
    <string name="sections_title">Выбрать разделы</string>
    <string name="settings_title">Настройки</string>

    <!-- Contacts -->
    <string name="contacts_organization">Учреждение Редакция районной газеты Аршанская газета и программы районного радиовещания</string>
    <string name="contacts_editor_caption">Главный редактор:</string>
    <string name="contacts_editor_name">Турок Анастасия Александровна</string>
    <string name="contacts_address_caption">Адрес:</string>
    <string name="contacts_address_city">211030 г.Орша, Витебская область</string>
    <string name="contacts_address_street">ул. Александра Герцена, 4а</string>
    <string name="contacts_schedule_caption">Время работы:</string>
    <string name="contacts_schedule_work">Пн–Пт 8.00–17.00</string>
    <string name="contacts_schedule_break">(перерыв с 13.00–14.00)</string>
    <string name="contacts_phone_hotline">Горячая линия: 8 (0216) 51–25–75</string>
    <string name="contacts_phone_editor">Главный редактор: 8 (0216) 51–25–00</string>
    <string name="contacts_email_caption">Электронная почта:</string>
    <string name="contacts_email_address">ag41@mail.ru</string>
    <string name="contacts_vk_link">Группа ВКонтакте:</string>
    <string name="contacts_ok_link">Группа Одноклассники:</string>

    <string-array name="update_period">
        <item>1 Месяц</item>
        <!--//TODO: {akuzniatsou} adjust repository to fetch article by range -->
        <!--<item>2 Месяца</item>-->
    </string-array>

    <!-- Test values -->
    <string name="test_text">Госконтроль выявил нарушения порядка представления данных государственной статистической отчетности</string>
    <string name="test_salary">9999,99</string>
    <string name="contacts">Контакты</string>
    <string name="offline_mode">Оффлайн режим</string>
    <string name="vk_link">https://vk.com/arshanka</string>
    <string name="ok_link">https://ok.ru/arshanskay</string>

</resources>
